--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "@expo/config-plugins": "~7.2.5",
+    "@expo/prebuild-config": "~6.2.4",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.19",
+    "axios": "^1.5.1",
+    "expo": "^49.0.18",
+    "expo-dev-client": "~2.4.12",
+    "expo-firebase": "^0.0.0-alpha.0",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.72.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "^0.19.9",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.3",
+    "metro-transform-worker": "^0.80.1"
+  },
+  "resolutions": {
+    "@expo/config-plugins": "~7.2.5",
+    "@expo/prebuild-config": "~6.2.4"
   },
   "private": true
 }
